--- a/WebScrapping-FIFA22.ipynb
+++ b/WebScrapping-FIFA22.ipynb
@@ -1283,10 +1283,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('all_players.csv', index=False, encoding=\"utf-8-sig\") \n",
-    "df2.to_csv('all_gk.csv', index=False, encoding=\"utf-8-sig\")\n",
-    "df3.to_csv('all_players_not_gk.csv', index=False, encoding=\"utf-8-sig\") \n",
-    "df4.to_csv('all_teams.csv', index=False, encoding=\"utf-8-sig\") "
+    "df.to_csv('data\\all_players.csv', index=False, encoding=\"utf-8-sig\") \n",
+    "df2.to_csv('data\\all_gk.csv', index=False, encoding=\"utf-8-sig\")\n",
+    "df3.to_csv('data\\all_players_not_gk.csv', index=False, encoding=\"utf-8-sig\") \n",
+    "df4.to_csv('data\\all_teams.csv', index=False, encoding=\"utf-8-sig\") "
    ]
   },
   {
